--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Localhy - Sign Up or Login in your city</title>
-    <meta name="description" content="Join Localhy's hyper-local platform for local businesses, idea creators, and referrers. Sign up or login to promote, earn, and grow in your community.">
+    <title>Localhy | Share Business Ideas, Earn from Referrals & Grow Locally</title>
+    <meta name="description" content="Localhy is a hyperlocal platform to share business ideas, post referral jobs, and access smart tools. Get paid when people read your ideas or act on your referrals. Start local, grow fast.">
     <meta name="keywords" content="hyper-local, local business, sign-up, community platform, referrals, business ideas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
